# samsung_ac_drc

./: .gitignore  LICENSE  NOTICE  README.md  cli.py  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/samsung_ac_drc/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  drc_client.py  manifest.json  mappings.py  strings.json
tests/: conftest.py  test_cli.py  test_config_flow.py  test_drc_client.py  test_mappings.py
